--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <main id="home">
         <h1>Hello World</h1>
     </main>
-    <script src="./scr/JS/main.js"></script>
+    <script type="module" src="./scr/JS/main.js"></script>
 </body>
 </html>
